hphp/test/zend/good/Zend/tests/objects_026.php.expectf

Fatal error: $this is null in %s/objects_026.php on line 4
